--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.0.0",
-    "@datepicker-react/styled": "^2.7.0",
-    "@emotion/react": "^11.0.0",
+    "@chakra-ui/react": "^1.2.1",
+    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
@@ -15,13 +14,16 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.7",
-    "framer-motion": ">=3.0.0",
+    "@types/react-slick": "^0.23.4",
+    "framer-motion": "^3.3.0-beta.22",
     "react": "^17.0.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-icons": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.28.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "typescript": "^3.9.5",
     "web-vitals": "^0.2.2"
