--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://haihaibeo.github.io/Hostel/",
   "name": "hotel-chakra",
   "version": "0.1.0",
   "private": true,
@@ -29,6 +30,8 @@
     "web-vitals": "^0.2.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
