--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4",
     "framer-motion": "^3.3.0-beta.22",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
@@ -30,12 +31,12 @@
     "web-vitals": "^0.2.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
