--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4",
+    "axios": "^0.21.1",
     "framer-motion": "^3.3.0-beta.22",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-icons": "^3.0.0",
+    "react-query": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.28.0",
