--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.2.1",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "@testing-library/jest-dom": "^5.9.0",
+    "@chakra-ui/react": "^1.5.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^10.2.1",
-    "@testing-library/user-event": "^12.0.2",
+    "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^25.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/node": "^12.20.7",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^16.9.12",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4",
     "axios": "^0.21.1",
-    "framer-motion": "^3.3.0-beta.22",
+    "framer-motion": "^3.10.6",
     "gh-pages": "^3.1.0",
-    "react": "^17.0.1",
-    "react-day-picker": "^7.4.8",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-day-picker": "^7.4.10",
+    "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
-    "react-query": "^3.12.1",
+    "react-query": "^3.13.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-slick": "^0.28.0",
+    "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.2.1",
-    "typescript": "^3.9.5",
+    "styled-components": "^5.2.3",
+    "typescript": "^3.9.9",
     "web-vitals": "^0.2.2"
   },
   "scripts": {
