--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "framer-motion": "^3.10.6",
     "gh-pages": "^3.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
@@ -27,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.28.1",
+    "react-top-loading-bar": "^2.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "typescript": "^3.9.9",
